--- a/links-website/public/index.html
+++ b/links-website/public/index.html
@@ -175,7 +175,7 @@
             
             <a
               class="link link-medium mb-3 min-w-full rounded py-2 text-lg sm:px-24"
-              href="https://medium.com/sanchpet"
+              href="https://medium.com/@sanchpet"
               target="_blank"
               
               rel="me noopener noreferrer"
